# VogonPoetry

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.trunk/: trunk.yaml
config/: example_pipeline.yaml
examples/: example_pipeline.yaml
rust_core/embedder/: Cargo.toml
rust_core/embedder/src/: lib.rs  main.rs
rust_core/tag_matcher/: Cargo.toml
rust_core/tag_matcher/src/: lib.rs  main.rs
scripts/: run.sh
tests/: test_loader.py
tests/embedders/: test_embedders.py  test_local_embedder.py  test_remote_embedder.py
tests/logging/: test_logging.py
tests/pipeline/steps/: test_filter_tools.py  test_fork.py
tests/tags/: test_tags.py
tests/utils/: test_filter_config.py  test_pattern_matcher.py
vogonpoetry/: __init__.py  __main__.py  api.py  app.py  config.py  context.py  loader.py
vogonpoetry/config/: __init__.py  config.py  load.py  loader.py
vogonpoetry/config/embedders/: __init__.py  base.py  local.py  remote.py
vogonpoetry/config/pipeline/: __init__.py  pipeline.py  tag.py
vogonpoetry/config/pipeline/steps/: __init__.py  base.py  classify_request.py  fork.py  merge_prompts.py
vogonpoetry/embedders/: __init__.py  base.py  local.py  remote.py
vogonpoetry/embedding/: __init__.py  embedder.py  remote.py  sentence_transformer.py
vogonpoetry/logging/: __init__.py
vogonpoetry/mcp/: client.py
vogonpoetry/messages/: __init__.py  base.py
vogonpoetry/metrics/: __init__.py  logger.py
vogonpoetry/metrics/prometheus/: __init__.py
vogonpoetry/pipeline/: __init__.py  context.py  context_merge.py  factory.py  pipeline.py  runner.py  topo.py
vogonpoetry/pipeline/steps/: __init__.py  base.py  classify.py  classify_request.py  dummy.py  filter_tools.py  fork.py  fork_pipeline.py  merge_prompts.py  types.py
vogonpoetry/pipeline/tracing/: writer.py
vogonpoetry/tags/: __init__.py  tag.py  tag_score.py  tag_vector.py  utils.py
vogonpoetry/tracing/: __init__.py  store.py  writer.py
vogonpoetry/utils/: filter_config.py  pattern_matcher.py
