[tool.poetry]
name = "vogonpoetry"
version = "0.1.0"
description = "YAML pipelines for sarcastic automation"
authors = ["Teagan <teagan@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
pydantic = "^2.7.0"
pymetrics = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"